# Mortgage_Rates

./: .gitignore  README.md  pyproject.toml
.data/: MORTGAGE30US.csv  inflation_rates.csv  mortgage_rates.csv
scripts/: LightGBM in Darts.ipynb  darts.ipynb  getdata.ipynb
