[project]
name = "timeseries-darts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "darts>=0.32.0",
    "html5lib>=1.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lightgbm>=4.5.0",
    "lxml>=5.3.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "prophet>=1.1.6",
    "scikit-learn>=1.5.2",
]
